opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/pi8027/mczify"
dev-repo: "git+https://github.com/pi8027/mczify.git"
bug-reports: "https://github.com/pi8027/mczify/issues"
license: "CECILL-B"

synopsis: "Instances for the zify Coq tactic for MathComp"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.11" & < "8.12~"}
  "coq-mathcomp-ssreflect" {(>= "1.11" & < "1.12~") | (= "dev")}
  "coq-mathcomp-algebra"
]

tags: [
  "logpath:mathcomp.zify"
]
authors: [
  "Kazuhiko Sakaguchi"
]
